[package]
name = "capek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.44", features = ["tcp-tokio", "dns-tokio", "mplex", "noise"] }
tokio = { version = "1", features = ["full"] }

